--- a/tigers.yaml
+++ b/tigers.yaml
@@ -1,12 +1,8 @@
 team: Tigers
 
-<<<<<<< HEAD
-manager: Brenda
-=======
 manager: Kenneth
->>>>>>> to-merge
 
-coach: Ruth
+coach: Grace
 
 members:
 - Linda
