Add Evie to Leopards

--- a/leopards.yaml
+++ b/leopards.yaml
@@ -2,14 +2,11 @@ team: Leopards
 
 manager: Nora
 
-<<<<<<< HEAD
-coach: Nicholas
-=======
 coach: Melissa
->>>>>>> 21c7cfc (Edit Leopards)
 
 members:
 - Linda
 - William
 - David
 - Olivia
+- Evie
