Add Arachi to Panthers

--- a/panthers.yaml
+++ b/panthers.yaml
@@ -2,14 +2,11 @@ team: Panthers
 
 manager: Sebastian
 
-<<<<<<< HEAD
 coach: Shirley
-=======
-coach: Raymond
->>>>>>> 6cd2cdc (Edit Panthers)
 
 members:
 - Violet
 - Stella
 - Anthony
 - Freddie
+- Arachi
