--- a/tigers.yaml
+++ b/tigers.yaml
@@ -1,10 +1,6 @@
 team: Tigers
 
-<<<<<<< HEAD
 manager: Brenda
-=======
-manager: Kenneth
->>>>>>> to-merge
 
 coach: Ruth
 
@@ -14,3 +10,4 @@ members:
 - David
 - George
 - Tyler
+- reset
